# dflow3

./: README.md  mongoDbpopulate.js
dflow_api/: .gitignore  Cargo.toml  Rocket.toml
dflow_api/src/: main.rs
dflow_api/src/modules/: mod.rs
dflow_api/src/modules/dashboard/: mod.rs
dflow_api/src/modules/dashboard/infrastructure/persistence/: dashboard_getter.rs  dashboard_saver.rs  mod.rs  panel_getter.rs  panel_saver.rs
dflow_api/src/modules/dashboard/model/: mod.rs
dflow_api/src/modules/datasource/: mod.rs
dflow_api/src/modules/datasource/application/: configuration_factory.rs  mod.rs
dflow_api/src/modules/datasource/infrastructure/: mod.rs
dflow_api/src/modules/datasource/model/: datasource_repository.rs  datasource_type.rs  mod.rs  sql_dialect.rs
dflow_api/src/modules/dmodel/: mod.rs
dflow_api/src/modules/dmodel/application/: mod.rs  model_saver.rs
dflow_api/src/modules/dmodel/infrastructure/: mod.rs
dflow_api/src/modules/dmodel/model/: mod.rs  model.rs  model_mock.rs
dflow_api/src/modules/query/application/: mod.rs  query_runner_factory.rs  user_query_executor.rs
dflow_api/src/modules/query/infrastructure/: mod.rs
dflow_api/src/modules/query/model/: mod.rs
dflow_api/src/modules/shared/: mod.rs
dflow_api/src/modules/shared/auth/: jwt.rs
dflow_api/src/modules/shared/persistence/: mod.rs
dflow_api/src/modules/shared/security/: mod.rs
dflow_api/src/modules/shared/shared_state/: mod.rs  shared_connections.rs
dflow_api/src/template_dir/: mod.rs
dflow_api/templates/: error_401.html  error_404.html  error_500.html
(+132 files in other folders)
