[package]
name = "dflow_api"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = { version = "=0.5.0", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
test-case = "3.3.1"
rusqlite = "0.30.0"
sql_query_builder = "2.1.0"
load-dotenv = "0.1.2"

# Better errors
anyhow = "1.0.77"
thiserror = "1.0.52"

# Sql
tokio-postgres = "0.7.10"
deadpool-postgres = "0.12.1"
deadpool-tiberius = "0.1.6"
rocket_cors = "0.6.0"
askama_rocket = "0.12.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars"]

[dependencies.askama]
version = "0.12.1"
features = ["with-rocket"]


[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_sqlite"]
